kinoteka.co:     -> fixed mobile menu appeareness (moved from usgin "hidden" class to "invisible")

--- a/www/kinoteka.co/app/less/header.less
+++ b/www/kinoteka.co/app/less/header.less
@@ -137,8 +137,7 @@
       top: 100%;
 
       background-color: @header-background-color;
-      //bootstrap purpose
-      display: block !important;
+      display: block;
       border-bottom: @border-default;
       border-top: @border-default;
       z-index: @header-z-index-base - 2;
